# MIT-15.376-Homework-3

./: README.md  main.py  pyproject.toml  server.py
src/mcp_server_grep_app/: __init__.py  server.py
